--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,21 @@
   <strong>Role:</strong>
   <%= @user.role.name %>
 </p>
+<p>
+  <strong>Joined on:</strong>
+  <%= @joined_on %>
+</p>
+
+<p>
+  <strong>Last logged in on:</strong>
+  <%= @last_login %>
+</p>
+
+<p>
+  <strong>No. times logged in:</strong>
+  <%= @user.sign_in_count %>
+</p>
+
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
