--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,6 +13,7 @@
   <tbody>
   <% @posts.each do |post| %>
     <tr>
+      <td><%= image_tag post.image.url(:medium) %></td>
       <td><%= post.title %></td>
       <td><%= post.description %></td>
       <td><%= post.user.name %></td>
