implement functionality to hide news v2

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 
 
 <h1>Posts</h1>
-<% if can? :discard, Post %>
+<% if current_user&.admin? %>
   <%= link_to 'Kept', posts_path %>
   <%= link_to 'All', all_posts_path %>
   <%= link_to 'Discarded', discarded_posts_path %>
