--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="form-group">
     <%= form.label :image %>
-    <%= form.file_field :image, class: "form-control" %>
+    <%= form.file_field :image %>
   </div>
 
   <div class="actions">
