--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<h1>Posts</h1>
+<h1>News</h1>
 <% if current_user&.admin? %>
   <%= link_to 'Kept', posts_path %>
   <%= link_to 'All', all_posts_path %>
